# olist-model-churn-sellers

./: .gitignore  pyproject.toml
artifacts/: prd_drop_nullvars.pkl  prd_fillna.pkl  prd_onehotenc.pkl  selected_features.pkl
global/: util.py
notebooks/: 01-create-feature-store.ipynb  02-create-target.ipynb  03-logist-regression.ipynb
